P20: quote systemd Environment=JAVA_OPTS; pub ready probe; guard probes
systemd parses an unquoted Environment=JAVA_OPTS=a b c as a list of
assignments — only the first --add-opens survived and the license -D was
dropped, crash-looping exchange and pub. Pub converged green anyway: no
ready probe, and Type=simple start 'succeeds' before the first crash. Added
fxc-pub-ready and is-active guards (P16 pattern) on all three JVM probes.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>